--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "styled-components": "^6.1.16",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
